correct toList to collectors